[project]
name = "monorepo"
description = "An awesome package is coming soon! 🎉"
# TODO: This needs to be dynamic (https://hatch.pypa.io/latest/version/).
version = "0.0.0"
readme = "README.md"
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = ["siteforge", "forgeserver[standard]", "asgi-types"]
optional-dependencies = {}

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    # Test dependencies
    "coverage[toml]",
    "pytest",
    "pytest-sugar",
    "pytest-xdist[psutil]",
    "dirty-equals",
    "inline-snapshot",
    # ForgeServer test dependencies
    "httpx==0.27.2",
    "httptools>=0.6.3",
    "pytest-mock==3.14.0",
    "a2wsgi==1.10.7",
    "wsproto==1.2.0",
    "websockets==13.1",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings-python"]

[tool.uv]
package = false
default-groups = ["dev", "docs"]

[tool.uv.sources]
siteforge = { workspace = true }
forgeserver = { workspace = true }
asgi-types = { workspace = true }

[tool.uv.workspace]
members = ["src/*/"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # https://docs.astral.sh/ruff/rules/#error-e
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
ignore = ["B904", "B028", "UP031"]
isort = { combine-as-imports = true, split-on-trailing-comma = false }

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "-rX --strict-config --strict-markers -n 8"
xfail_strict = true
filterwarnings = [
    "error",
    'ignore: \"watchgod\" is deprecated\, you should switch to watchfiles \(`pip install watchfiles`\)\.:DeprecationWarning',
    "ignore:ForgeServer's native WSGI implementation is deprecated.*:DeprecationWarning",
    "ignore: 'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore: remove second argument of ws_handler:DeprecationWarning:websockets",
]

[tool.coverage.run]
branch = true
source_pkgs = ["siteforge", "forgeserver", "asgi_types"]

[tool.coverage.report]
# TODO: Readd 100% coverage.
# fail_under = 100
show_missing = true
skip_covered = true
